--- a/index.html
+++ b/index.html
@@ -558,11 +558,8 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                             <div class="col-lg-4 col-md-8 col-12 order-1 order-lg-0">
                                 <div class="custom-block-image-wrap">
-                                    <a href="#section_future">
-                                        <img src="images/conteudos-futuros/ModaLisboa.jpg" class="custom-block-image img-fluid" alt="Moda Lisboa">
+                                        <img src="images/conteudos-futuros/ModaLisboa.jpg" class="rounded-4 w-100 object-fit-cover" style="max-height: 240px;" alt="Moda Lisboa">
 
-                                        <i class="custom-block-icon bi-link"></i>
-                                    </a>
                                 </div>
                             </div>
 
@@ -597,11 +594,9 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                             <div class="col-lg-4 col-md-8 col-12 order-1 order-lg-0">
                                 <div class="custom-block-image-wrap">
-                                    <a href="#section_future">
-                                        <img src="images/conteudos-futuros/Estratégias de Marketing Digital para Pequenas Empresas.jpg" class="custom-block-image img-fluid" alt="Estratégias de Marketing Digital para Pequenas Empresas">
+                                        <img src="images/conteudos-futuros/Estratégias de Marketing Digital para Pequenas Empresas.jpg" class="rounded-4 w-100 object-fit-cover" style="max-height: 240px;" alt="Estratégias de Marketing Digital para Pequenas Empresas">
 
-                                        <i class="custom-block-icon bi-link"></i>
-                                    </a>
+
                                 </div>
                             </div>
 
@@ -637,11 +632,10 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                             <div class="col-lg-4 col-md-8 col-12 order-1 order-lg-0">
                                 <div class="custom-block-image-wrap">
-                                    <a href="#section_future">
-                                        <img src="images/conteudos-futuros/Benefícios de uma Dieta Equilibrada_.jpg" class="custom-block-image img-fluid" alt="Benefícios de uma Dieta Equilibrada">
+                                    
+                                        <img src="images/conteudos-futuros/Benefícios de uma Dieta Equilibrada_.jpg" class="rounded-4 w-100 object-fit-cover" style="max-height: 240px;" alt="Benefícios de uma Dieta Equilibrada">
 
-                                        <i class="custom-block-icon bi-link"></i>
-                                    </a>
+
                                 </div>
                             </div>
 
@@ -676,11 +670,10 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                             <div class="col-lg-4 col-md-8 col-12 order-1 order-lg-0">
                                 <div class="custom-block-image-wrap">
-                                    <a href="#section_future">
-                                        <img src="images/conteudos-futuros/Tendências de Design Gráfico para 2025.jpg" class="custom-block-image img-fluid w-100" alt="Tendências de Design Gráfico para 2025">
 
-                                        <i class="custom-block-icon bi-link"></i>
-                                    </a>
+                                        <img src="images/conteudos-futuros/Tendências de Design Gráfico para 2025.jpg" class="rounded-4 w-100 object-fit-cover" style="max-height: 240px;" alt="Tendências de Design Gráfico para 2025">
+
+
                                 </div>
                             </div>
 
@@ -716,11 +709,8 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                             <div class="col-lg-4 col-md-8 col-12 order-1 order-lg-0">
                                 <div class="custom-block-image-wrap">
-                                    <a href="#section_future">
-                                        <img src="images/conteudos-futuros/Como Implementar Sustentabilidade na Sua Empresa.jpg" class="custom-block-image img-fluid" alt="Como Implementar Sustentabilidade na Sua Empresa">
+                                        <img src="images/conteudos-futuros/Como Implementar Sustentabilidade na Sua Empresa.jpg" class="rounded-4 w-100 object-fit-cover" style="max-height: 240px;" alt="Como Implementar Sustentabilidade na Sua Empresa">
 
-                                        <i class="custom-block-icon bi-link"></i>
-                                    </a>
                                 </div>
                             </div>
 
@@ -755,11 +745,8 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                             <div class="col-lg-4 col-md-8 col-12 order-1 order-lg-0">
                                 <div class="custom-block-image-wrap">
-                                    <a href="#section_future">
-                                        <img src="images/conteudos-futuros/O Futuro das Tecnologias de Informação.jpg" class="custom-block-image img-fluid w-100" alt="O Futuro das Tecnologias de Informação">
+                                        <img src="images/conteudos-futuros/O Futuro das Tecnologias de Informação.jpg" class="rounded-4 w-100 object-fit-cover" style="max-height: 240px;" alt="O Futuro das Tecnologias de Informação">
 
-                                        <i class="custom-block-icon bi-link"></i>
-                                    </a>
                                 </div>
                             </div>
 
@@ -787,9 +774,9 @@ https://templatemo.com/tm-587-tiya-golf-club
                 </div>
             </section>
 
-            <section class="membership-section section-padding" id="section_3" style=" background-color: #F4F1DE;">
+            <section class="membership-section section-padding" id="section_team">
                 <div class="row p-5">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
