--- a/index.html
+++ b/index.html
@@ -443,11 +443,11 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                                         <div class="accordion-item">
                                             <h2 class="accordion-header bg-" id="headingThree">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseZero" aria-expanded="false" aria-controls="collapseThree">
                                                 <h5>Que serviços oferece a vossa agência de comunicação?</h5>
                                                 </button>
                                             </h2>
-                                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                            <div id="collapseZero" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                                 <div class="accordion-body">
                                                     Oferecemos uma ampla gama de serviços, incluindo assessoria de imprensa, gestão de redes sociais, marketing de conteúdos e criação de identidade visual. Trabalhamos com estratégias personalizadas para atender às necessidades específicas de cada cliente.
                                                 </div>
@@ -495,11 +495,11 @@ https://templatemo.com/tm-587-tiya-golf-club
 
                                         <div class="accordion-item">
                                             <h2 class="accordion-header" id="headingThree">
-                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
                                                 <h5>Quais são os benefícios de contratar uma agência de comunicação em vez de gerir internamente?</h5>
                                                 </button>
                                             </h2>
-                                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                                 <div class="accordion-body">
                                                     Contratar uma agência oferece acesso a uma equipa de especialistas com experiência em várias áreas da comunicação. Economiza tempo e recursos, permitindo que a sua empresa se foque nas suas competências principais enquanto nós cuidamos da sua estratégia de comunicação com eficiência e criatividade.
                                                 </div>
