--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@ https://templatemo.com/tm-587-tiya-golf-club
                             </li> -->
                         </ul>
 
-                        <div class="d-none d-lg-block ms-lg-3">
+                        <!-- <div class="d-none d-lg-block ms-lg-3">
                             <a class="btn custom-btn custom-border-btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">Login</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </nav>
