--- a/index.html
+++ b/index.html
@@ -203,8 +203,9 @@ https://templatemo.com/tm-587-tiya-golf-club
                                             <img src="images/servicos/assessoria de imprensa_.jpg" class="rounded-4 w-100 object-fit-cover" alt="Assessoria de imprensa" style="max-height: 200px;">
 
                                             <h2>Assessoria de Imprensa</h2>
-                                            <p> Desenvolvemos comunicados de imprensa, organizamos conferências de imprensa e 
-                                                estabelecemos umarelação sólida com jornalistas para garantir que as suas novidades
+                                            <p> 
+                                                Desenvolvemos comunicados de imprensa, organizamos conferências de imprensa e 
+                                                estabelecemos uma relação sólida com jornalistas para garantir que as suas novidades
                                                 sejam divulgadas da melhor forma possível.
                                             </p>
                                             
@@ -224,7 +225,8 @@ https://templatemo.com/tm-587-tiya-golf-club
                                             <img src="images/servicos/Gestão de redes.jpg" class="rounded-4 w-100 object-fit-cover" alt="Gestão de redes" style="max-height: 200px;">
 
                                             <h2>Gestão de Redes Sociais</h2>
-                                            <p> Criamos estratégias personalizadas para cada plataforma, produzimos conteúdos envolventes e 
+                                            <p> 
+                                                Criamos estratégias personalizadas para cada plataforma, produzimos conteúdos envolventes e 
                                                 gerimos as suas contas para aumentar o envolvimento, seguidores e visibilidade da sua marca.
                                             </p>
 
@@ -245,7 +247,8 @@ https://templatemo.com/tm-587-tiya-golf-club
                                             <img src="images/servicos/Marketing de conteudos.jpg" class="rounded-4 w-100 object-fit-cover" alt="" style="max-height: 200px;">
                                             
                                             <h2>Marketing de Conteúdos</h2>
-                                            <p> Desenvolvemos blogs, artigos, e-books, newsletters e outros materiais que atraem
+                                            <p> 
+                                                Desenvolvemos blogs, artigos, e-books, newsletters e outros materiais que atraem
                                                 e fidelizam clientes, posicionando a sua empresa comoreferência no mercado.
                                             </p>
 
@@ -265,7 +268,8 @@ https://templatemo.com/tm-587-tiya-golf-club
                                             <img src="images/servicos/criação de identidade visual.jpg" class="rounded-4 w-100 object-fit-cover" alt="" style="max-height: 200px;">
 
                                             <h2>Criação de Identidade Visual</h2>
-                                            <p> A primeira impressão é crucial.
+                                            <p> 
+                                                A primeira impressão é crucial.
                                                 Desenvolvemos identidades visuais impactantes e coerentes com os valores da
                                                 sua marca. Desde acriação de logótipos até à definição de paletas de cores e
                                                 tipografias, garantimos que a sua empresa tem uma presença visual marcante e
