fixed section linking

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                             </h1> -->
 
                             <div class="custom-btn-group p-3">
-                                <a href="#section_4" class="btn custom-btn smoothscroll m-3 text-uppercase fw-bold">A nossa História</a>
+                                <a href="#" class="btn custom-btn smoothscroll m-3 text-uppercase fw-bold">A nossa História</a>
                             </div>
                         </div>
 
@@ -239,7 +239,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                 </div>
             </section>
 
-            <section class="membership-section section-padding" id="">
+            <section class="membership-section section-padding" id="section_3">
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-10">
