--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Tiya Golf Club - Free HTML CSS Template</title>
+        <title>DDW-UNAGI</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1014,19 +1014,19 @@ https://templatemo.com/tm-587-tiya-golf-club
                     <div class="col-lg-4 col-12 me-auto mb-5 mb-lg-0 align-self-center"> <!-- col-lg-3 col-12 -->
                         <h5 class="site-footer-title mb-4">Contactos</h5>
 
-                        <p class="d-flex border-bottom pb-3 mb-3 me-lg-3">
+                        <p class="d-flex border-bottom pb-3 mb-3 me-lg-3 text-dark">
                             <span>Contacto nacional</span>
                             (+1) 212-555-7890
                         </p>
 
-                        <p class="d-flex me-lg-3">
+                        <p class="d-flex me-lg-3 text-dark">
                             <span>Contacto global</span>
                             (+351) 211-234-567
                         </p>
                         <br>
                         <!--<p class="copyright-text">Copyright © 2048 Tiya Golf Club</p>-->
 
-                        <p class="text-center">Encontra-nos nas nossas redes sociais</p>
+                        <p class="text-center text-dark">Encontra-nos nas nossas redes sociais</p>
                         <ul class="social-icon mt-0 text-center">
                             <li class="social-icon-item">
                                 <a href="#" class="social-icon-link bi-instagram"></a>
