fixed testimonials layout issue

--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@ https://templatemo.com/tm-587-tiya-golf-club
             <section class="events-section section-bg section-padding" id="section_6">
                 <div class="container">
                     <div class="row justify-content-around">
-                    <div class="col-6 custom-block-bg border border-2 rounded-5 p-5">
+                    <div class="col-12 col-md-6 order-2 custom-block-bg border border-2 rounded-5 p-5">
                         <!-- Carousel wrapper -->
                         <div id="carouselExampleIndicators_2" data-mdb-carousel-init class="carousel slide text-center carousel-dark" data-mdb-ride="carousel">
                             <div class="carousel-inner">
@@ -918,7 +918,7 @@ https://templatemo.com/tm-587-tiya-golf-club
                         </div>
                     </div>
                     <!-- Carousel wrapper -->
-                    <div class="col-4 p-3 rounded-2 border-2 d-flex flex-column justify-content-evenly">
+                    <div class="col-12 col-lg-4 p-3 rounded-2 border-2 d-flex flex-column justify-content-evenly">
                         <h4>Testemunhos</h4>
 
                         <h2>O que é que os nossos clientes pensam sobre nós?</h2>
